--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "author": "Evan Tahler <evantahler@gmail.com>",
-  "name": "smartdc-computenodes",
+  "name": "smartdc-listcomputenodes",
   "description": "List your joyent machines by the compute node they are running on.  Ensure your workload is distributed!",
   "version": "0.0.1",
   "repository": {
     "type": "git",
-    "url": "git://github.com/evantahler/smartdc-compute-nodes.git"
+    "url": "git://github.com/evantahler/smartdc-listcomputenodes.git"
   },
   "keywords": ["joyent", "smartdc", "smart-dc", "datacenter", "compute", "nodes", "servers", "host"],
   "engines": {
@@ -16,6 +16,6 @@
     "optimist":"0.6.x"
   },
   "bin": {
-    "sdc-computenodes": "./bin/sdc-computenodes"
+    "sdc-listcomputenodes": "./bin/sdc-listcomputenodes"
   }
 }
